--- a/sprint/26/weapons-crime/index.html
+++ b/sprint/26/weapons-crime/index.html
@@ -75,7 +75,8 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
           <div class="padding-right--2 padding-bottom--0 padding-left--2">
             <p class="heading-small">Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most</p>
             <p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
-            <img style="width:100%" src="{{ "/assets/img/charts/weapons-highlight-1-lg.png" | relative_url }}" class="" alt="">
+            <img style="width:100%" src="{{ "/assets/img/charts/weapons-highlight-1-lg.png" | relative_url }}" class="margin-bottom--3" alt="">
+            <p class="font-xxsmall margin-bottom--3">Source: Police recorded crime, Home Office</p>
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
@@ -146,8 +147,28 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
               <span class="summary">Firearm crimes have increased for the first time since 2005
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
-              <!-- INSERT CHART HERE -->
-              <h3>INSERT A CHART HERE</h3>
+
+              <p class="heading-small">Police recorded firearms offences have increased over the last three years</p>
+              <p class="font-xsmall">England and Wales, year ending March 2003 to year ending December 2017</p>
+              <img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png" | relative_url }}" class="" alt="">
+              <p class="heading-xsmall">Source: Police recorded crime, Home Office</p>
+              <p class="heading-xsmall">Notes:</p>
+              <ol>
+                <li class="font-xsmall">Police recorded crime data are not designated as National Statistics.</li>
+                <li class="font-xsmall">Firearms include: shotguns; handguns; rifles; imitation weapons such as BB guns or soft air weapons; other weapons such as CS gas, pepper spray and stun guns; and unidentified weapons. They exclude conventional air weapons, such as air rifles.</li>
+              </ol>
+              <h5 class="margin-bottom--1">Download this chart</h5>
+              <div class="btn-group margin-bottom--4">
+                <button class="btn btn--primary font-xsmall">
+                      Image
+                  </button>
+                <button class="btn btn--primary font-xsmall">
+                      .CSV
+                  </button>
+                <button class="btn btn--primary font-xsmall">
+                      .XLS
+                  </button>
+              </div>
               <p>Offences involving firearms increased by 11% (to 6,604) in the year ending December 2017, compared with the previous year (5,945 offences).</p>
               <p class="font-weight--bold margin-bottom--1">Police recorded a:</p>
               <ul>
@@ -289,35 +310,55 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
 
             <h2 id="section-4">In this release</h2>
             <div class="flex-grid">
+            <div class="flex-col background--gallery padding-left--2 padding-right--2">
+              <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
+              <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</p>
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png" | relative_url }}" class="" alt="">
+              </div>
+              <details role="group" class="margin-bottom--4 details-small">
+                <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                  <span class="summary">What you need to know</span></summary>
+                  <div class="panel" id="details-content-1" aria-hidden="false">
+                    <p class="margin-top--0 margin-bottom--1">Data on this chart refer to different time periods.</p>
+                    <p class="margin-top--0 margin-bottom--1">1981 to 1999 refer to crimes experienced in the calendar year (January to December); and from year ending March 2002 onwards the estimates relate to crimes experienced in the 12 months before interview, based on interviews carried out in that financial year (April to March).</p>
+                  </div>
+              </details>
+            </div>
+
               <div class="flex-col background--gallery padding-left--2 padding-right--2">
-                <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
-                <p>While crime has fallen over the long-term, the short-term picture is more stable</p>
+                <h4><a class="heading-medium" href="../fraud">Fraud in England and Wales</a></h4>
+                <p>No change in the volume of fraud offences in the last year</p>
                 <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <iframe id="datawrapper-chart-nNagi" src="//datawrapper.dwcdn.net/nNagi/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 100%; min-width: 100% !important;" height="100%"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["nNagi"]={},window.datawrapper["nNagi"].embedDeltas={"100":440,"200":440,"300":440,"400":440,"500":440,"700":440,"800":440,"900":440,"1000":440},window.datawrapper["nNagi"].iframe=document.getElementById("datawrapper-chart-nNagi"),window.datawrapper["nNagi"].iframe.style.height=window.datawrapper["nNagi"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["nNagi"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("nNagi"==b)window.datawrapper["nNagi"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                  <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
                 </div>
                 <details role="group" class="margin-bottom--4 details-small">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
                     <span class="summary">What you need to know</span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
-                      <p class="margin-top--0 margin-bottom--1">As measured by the Crime Survey of England and Wales</p>
+                      <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
+                    </div>
+                </details>
+              </div>
+            </div>
+
+            <div class="flex-grid margin-top--2">
+              <div class="flex-col background--gallery padding-left--2 padding-right--2">
+                <h4><a class="heading-medium" href="../violent-crime">Violence crime in England and Wales</a></h4>
+                <p>Little change in levels of violent crime in recent years</p>
+                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                  <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png" | relative_url }}" class="" alt="">
+                </div>
+                <details role="group" class="margin-bottom--4 details-small">
+                  <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                    <span class="summary">What you need to know</span></summary>
+                    <div class="panel" id="details-content-1" aria-hidden="false">
+                      <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
                     </div>
                 </details>
               </div>
 
-              <div class="flex-col background--gallery padding-left--2 padding-right--2">
-                <h4><a class="heading-medium" href="#">Homicide in England and Wales</a></h4>
-                <p>The number of homicides has been impacted by recent terrorist attacks</p>
-                <div class="margin-bottom--2" style="background-color:white;">
-                  <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
-                </div>
-                <details role="group" class="margin-bottom--4 details-small">
-                  <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                    <span class="summary">What you need to know</span></summary>
-                    <div class="panel" id="details-content-1" aria-hidden="false">
-                      <p class="margin-top--0 margin-bottom--1">These numbers are also affected by the 2017 Hillsborough verdict.</p>
-                    </div>
-                </details>
-              </div>
+              <div class="flex-col  padding-left--2 padding-right--2"></div>
             </div>
 
       <p class="margin-top--4">
