--- a/sprint/26/violent-crime/index.html
+++ b/sprint/26/violent-crime/index.html
@@ -75,7 +75,8 @@ title: "Violent Crime in England and Wales: year ending December 2017"
           <div class="padding-right--2 padding-bottom--0 padding-left--2">
             <p class="heading-small">Little change in levels of violent crime in recent years</p>
             <p class="font-xsmall">England and Wales, year ending December 1981 to year ending December 2017</p>
-            <iframe id="datawrapper-chart-cXkyA" src="//datawrapper.dwcdn.net/cXkyA/4/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="465"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["cXkyA"]={},window.datawrapper["cXkyA"].embedDeltas={"100":465,"200":465,"300":465,"400":465,"500":465,"700":465,"800":465,"900":465,"1000":465},window.datawrapper["cXkyA"].iframe=document.getElementById("datawrapper-chart-cXkyA"),window.datawrapper["cXkyA"].iframe.style.height=window.datawrapper["cXkyA"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["cXkyA"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("cXkyA"==b)window.datawrapper["cXkyA"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+            <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_lg.png" | relative_url }}" class="margin-bottom--3" alt="">
+            <p class="font-xxsmall margin-bottom--3">Source: Crime Survey for England and Wales, Office for National Statistics</p>
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
@@ -265,35 +266,55 @@ title: "Violent Crime in England and Wales: year ending December 2017"
 
             <h2 id="section-4">In this release</h2>
             <div class="flex-grid">
+            <div class="flex-col background--gallery padding-left--2 padding-right--2">
+              <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
+              <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</p>
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png" | relative_url }}" class="" alt="">
+              </div>
+              <details role="group" class="margin-bottom--4 details-small">
+                <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                  <span class="summary">What you need to know</span></summary>
+                  <div class="panel" id="details-content-1" aria-hidden="false">
+                    <p class="margin-top--0 margin-bottom--1">Data on this chart refer to different time periods.</p>
+                    <p class="margin-top--0 margin-bottom--1">1981 to 1999 refer to crimes experienced in the calendar year (January to December); and from year ending March 2002 onwards the estimates relate to crimes experienced in the 12 months before interview, based on interviews carried out in that financial year (April to March).</p>
+                  </div>
+              </details>
+            </div>
+
               <div class="flex-col background--gallery padding-left--2 padding-right--2">
-                <h4><a class="heading-medium" href="../crime-overview">Weapons Crime in England and Wales</a></h4>
-                <p>Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
-                <div class="margin-bottom--2" style="padding:8px 8px 8px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/police_recorded_crime_2.png" | relative_url }}" class="" alt="">
+                <h4><a class="heading-medium" href="../fraud">Fraud in England and Wales</a></h4>
+                <p>No change in the volume of fraud offences in the last year</p>
+                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                  <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
                 </div>
-                <details role="group" class="margin-bottom--2">
+                <details role="group" class="margin-bottom--4 details-small">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
                     <span class="summary">What you need to know</span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
-                      <p class="margin-top--0 margin-bottom--1">Police recorded crime is not a national statistic</p>
+                      <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
+                    </div>
+                </details>
+              </div>
+            </div>
+
+            <div class="flex-grid margin-top--2">
+              <div class="flex-col background--gallery padding-left--2 padding-right--2">
+                <h4><a class="heading-medium" href="../weapons-crime">Weapons crime in England and Wales</a></h4>
+                <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most</p>
+                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                  <img style="width:100%" src="{{ "/assets/img/charts/weapons_highlight_sm.png" | relative_url }}" class="" alt="">
+                </div>
+                <details role="group" class="margin-bottom--4 details-small">
+                  <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                    <span class="summary">What you need to know</span></summary>
+                    <div class="panel" id="details-content-1" aria-hidden="false">
+                      <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
                     </div>
                 </details>
               </div>
 
-              <div class="flex-col background--gallery padding-left--2 padding-right--2">
-                <h4><a class="heading-medium" href="#">Homicide in England and Wales</a></h4>
-                <p>The number of homicides has been impacted by recent terrorist attacks</p>
-                <div class="margin-bottom--2" style="background-color:white;">
-                  <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
-                </div>
-                <details role="group" class="margin-bottom--2">
-                  <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                    <span class="summary">What you need to know</span></summary>
-                    <div class="panel" id="details-content-1" aria-hidden="false">
-                      <p class="margin-top--0 margin-bottom--1">These numbers are also affected by the 2017 Hillsborough verdict.</p>
-                    </div>
-                </details>
-              </div>
+              <div class="flex-col  padding-left--2 padding-right--2"></div>
             </div>
 
             <p class="margin-top--4">
