Fraud page changes

--- a/sprint/26/fraud/index.html
+++ b/sprint/26/fraud/index.html
@@ -80,7 +80,8 @@ title: "Fraud in England and Wales: year ending December 2017"
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
-          <p>Over half (1.8 million) of fraud incidents were cyber-related.</p>
+          <p class="heading-medium margin-top--0">Over half of fraud incidents were cyber-related.</p>
+          <p>The National Fraud Intelligence Bureau (NFIB) recorded a similar number of fraud offences: 639,457 offences, 19 fewer offences than the previous year.</p>
         </div>
       </div>
     </div>
@@ -117,9 +118,7 @@ title: "Fraud in England and Wales: year ending December 2017"
           <h2 id="section-1">Summary</h2>
           <p class="heading-small">No increase in the amount of fraud</p>
           <p>3.2 million fraud offences were measured by the Crime Survey for England and Wales (CSEW). This has not increased from the results of last year’s survey.</p>
-          <p>The number of incidents referred to the National Fraud Intelligence Bureau (NFIB) was also unchanged.</p>
-          <p>The recorded crime series incorporates fraud offences collated by the NFIB from Action Fraud, Cifas and UK Finance and referred to the police for investigation.</p>
-          <p>There was a similar volume of fraud offences recorded in England and Wales in the year ending December 2017 (639,457 offences) compared with the previous year (639,476 offences).</p>
+          <p>The number of incidents referred to the National Fraud Intelligence Bureau (NFIB) was also unchanged. The recorded crime series incorporates fraud offences collated by the NFIB from Action Fraud, Cifas, UK Finance and incidents referred to the police for investigation. This series recorded a similar volume of fraud offences recorded in England and Wales in the year ending December 2017 (639,457 offences) compared with the previous year (639,476 offences).</p>
 
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
