Set up pages and files for sprint 28

--- a/prototypes.html
+++ b/prototypes.html
@@ -33,6 +33,14 @@ footer: false
         <li><a href="sprint/26/weapons-crime">Weapons crime</a></li>
       </ul>
 
+      <h2>Sprint 28</h2>
+      <ul>
+        <li><a href="sprint/28/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/28/weapons-crime">Weapons crime</a></li>
+        <li><a href="sprint/28/fraud">Fraud</a></li>
+        <li><a href="sprint/28/violent-crime">Violent crime</a></li>
+      </ul>
+
     </div>
   </div>
 </div>
