--- a/patterns.html
+++ b/patterns.html
@@ -17,43 +17,45 @@ footer: false
 
     <div class="col col--md-two-thirds col--lg-three-quarters">
       <h1>Patterns</h1>
-      <h2 id="section-1">Breadcrumbs</h2>
-      {% include breadcrumbs.html %}
-      <h2 id="section-2">Headings</h2>
-      {% include headings.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-3">Alerts</h2>
-      {% include alerts/info.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-4">Tables</h2>
-      {% include tables/example-01.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-5">Accordian</h2>
+      <h2 id="accordian">Accordian</h2>
       {% include accordian.html %}
+      <h2 id="alerts">Alerts</h2>
+      {% include alerts/standard-alert.html %}
+      <br>
+      {% include alerts/info-alert.html %}
       {% include back-to-top.html %}
-      <h2 id="section-6">Small content box</h2>
-      {% include small-content-box.html %}
+      <h2 id="breadcrumbs">Breadcrumbs</h2>
+      {% include breadcrumbs.html %}
       {% include back-to-top.html %}
-      <h2 id="section-7">Snapshots</h2>
-      {% include snapshot.html %}
+      <h2 id="charts">Charts</h2>
+      {% include chart.html %}
       {% include back-to-top.html %}
-      <h2 id="section-8">Related links</h2>
-      {% include related-links.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-9">Toggle content</h2>
-      {% include toggle-content.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-10">Get all data</h2>
+      <h2 id="get-all-data">Get all data</h2>
       {% include get-all-data.html %}
       {% include back-to-top.html %}
-      <h2 id="section-11">Quote</h2>
+      <h2 id="headings">Headings</h2>
+      {% include headings.html %}
+      {% include back-to-top.html %}
+      <h2 id="related-links">Related links</h2>
+      {% include related-links.html %}
+      {% include back-to-top.html %}
+      <h2 id="related-statistics">Related statistics</h2>
+      {% include related-statistics.html %}
+      {% include back-to-top.html %}
+      <h2 id="small-content-box">Small content box</h2>
+      {% include small-content-box.html %}
+      {% include back-to-top.html %}
+      <h2 id="snapshots">Snapshots</h2>
+      {% include snapshot.html %}
+      {% include back-to-top.html %}
+      <h2 id="tables">Tables</h2>
+      {% include tables/example-01.html %}
+      {% include back-to-top.html %}
+      <h2 id="toggle-content">Toggle content</h2>
+      {% include toggle-content.html %}
+      {% include back-to-top.html %}
+      <h2 id="quote">Quote</h2>
       {% include quote.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-12">Info alert</h2>
-      {% include info-alert.html %}
-      {% include back-to-top.html %}
-      <h2 id="section-13">Charts</h2>
-      {% include chart.html %}
       {% include back-to-top.html %}
     </div>
   </div>
