more pages to show exmaples of nav and no nav

--- a/sprint/28/extended-nav/index.html
+++ b/sprint/28/extended-nav/index.html
@@ -96,22 +96,46 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
       <div class="col-wrap">
         <div class="col col--md-one-third col--lg-one-quarter sticky">
           <div class="">
-            <h2 class="heading-medium">Sections</h2>
+            <h2 class="heading-medium">On this page</h2>
             <ul class="section-contents">
               <li>
                 <a href="#section-1">Summary</a>
               </li>
               <li>
-                <a href="#section-2">Data</a>
+                <a href="#section-2">Get the data</a>
               </li>
               <li>
-                <a href="#section-3">Need to know</a>
+                <a href="#section-2">Methodology</a>
               </li>
               <li>
-                <a href="#section-4">In this release</a>
+                <a href="#section-3">About these statistics</a>
               </li>
               <li>
-                <a href="#section-5">Contact</a>
+                <a href="#section-2">National statistic</a>
+              </li>
+              <li>
+                <a href="#section-2">Glossary</a>
+              </li>
+              <li>
+                <a href="#section-2">More pages</a>
+              </li>
+              <li>
+                <a href="#section-5">Get in touch</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="">
+            <h2 class="heading-medium">Related pages</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Crime in England and Wales</a>
+              </li>
+              <li>
+                <a href="#section-2">Fraud in England and Wales</a>
+              </li>
+              <li>
+                <a href="#section-2">Violent crime in England and Wales</a>
               </li>
             </ul>
           </div>
