changes to snapshots

--- a/patterns.html
+++ b/patterns.html
@@ -51,6 +51,9 @@ footer: false
       <h2 id="snapshots">Snapshots</h2>
       {% include snapshot.html %}
       {% include back-to-top.html %}
+      <h2>Snapshot 2</h2>
+      {% include snapshot2.html %}
+      {% include back-to-top.html %}
       <h2 id="tables">Tables</h2>
       {% include tables/example-01.html %}
       {% include back-to-top.html %}
