--- a/sprint/28/merged-highlight-2/index.html
+++ b/sprint/28/merged-highlight-2/index.html
@@ -68,23 +68,24 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     </div>
   </div>
 
-  <div class="page-intro background--gallery padding-top--4">
+  <div class="page-intro background--gallery">
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col">
+          <h2>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most</h2>
+          <p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
+        </div>
+      </div>
+    </div>
+
+
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
-          <div class="padding-right--2 padding-bottom--0 padding-left--2">
-            <p class="heading-small">Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most</p>
-            <p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
+          <div class="padding-right--2 padding-bottom--0 padding-left--2 padding-top--4">
             <img style="width:100%" src="{{ "/assets/img/charts/weapons-highlight-1-lg.png " | relative_url }}" class="margin-bottom--3" alt="">
             <p class="font-xxsmall margin-bottom--3">Source: Police recorded crime, Home Office</p>
           </div>
-        </div>
-        <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
-          <ul>
-            <li>Crimes involving a knife or sharp instrument have increased in the last year.</li>
-            <li>Crime with firearms has also seen an increase in the last year.</li>
-            <li>63% of the increase in gun crime was driven by rises in London and Manchester.</li>
-          </ul>
         </div>
       </div>
     </div>
@@ -93,17 +94,14 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
   <div class="padding-bottom--6">
     <div class="wrapper">
       <div class="col-wrap">
-
-
-        <div class="col col--md-two-thirds col--lg-three-quarters">
-
-          <h2 class="margin-top--3">On this page you can:</h2>
+        <div class="col col--md-two-thirds col--lg-two-thirds">
+          <!-- <h2 class="margin-top--3">On this page you can:</h2>
           <ul>
             <li>Get an overview of the key findings of this release</li>
             <li><a href="#section-2">Download data</a></li>
             <li>Read a <a href="#glossary">glossary</a> of terms</li>
             <li>Find more <a href="#section-4">pages relating to crime</a></li>
-          </ul>
+          </ul> -->
 
           <h2 id="section-1" class="margin-top--7">Key findings for weapons crime</h2>
           <details role="group" class="margin-bottom--4 margin-top--1">
@@ -298,64 +296,42 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+        <!-- end of first column -->
 
-          <!-- <p class="margin-top--4">
-            <a href="#section-1">Back to top</a>
-          </p> -->
+        <div class="wrapper">
+          <div class="col-wrap">
+            <div class="col">
+              <h2 id="section-4" class="margin-top--7">Read more pages relating to crime</h2>
 
-          <h2 id="section-4" class="margin-top--7">Read more pages relating to crime</h2>
           <!-- <div class="flex-grid">
             <div class="flex-col background--gallery padding-left--2 padding-right--2">
-              <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
+              <h4><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></h4>
               <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</p>
               <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
                 <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
               </div>
-              <details role="group" class="margin-bottom--4 details-small">
-                <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                  <span class="summary">What you need to know</span></summary>
-                <div class="panel" id="details-content-1" aria-hidden="false">
-                  <p class="margin-top--0 margin-bottom--1">Data on this chart refer to different time periods.</p>
-                  <p class="margin-top--0 margin-bottom--1">1981 to 1999 refer to crimes experienced in the calendar year (January to December); and from year ending March 2002 onwards the estimates relate to crimes experienced in the 12 months before interview, based on interviews carried out
-                    in that financial year (April to March).</p>
-                </div>
-              </details>
             </div>
             <div class="flex-col background--gallery padding-left--2 padding-right--2">
-              <h4><a class="heading-medium" href="../fraud">Fraud in England and Wales</a></h4>
+              <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
               <p>No change in the volume of fraud offences in the last year</p>
               <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
                 <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png " | relative_url }}" class="" alt="">
               </div>
-              <details role="group" class="margin-bottom--4 details-small">
-                <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                  <span class="summary">What you need to know</span></summary>
-                <div class="panel" id="details-content-1" aria-hidden="false">
-                  <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
-                </div>
-              </details>
             </div>
-          </div>
-
-          <div class="flex-grid margin-top--2">
             <div class="flex-col background--gallery padding-left--2 padding-right--2">
-              <h4><a class="heading-medium" href="../violent-crime">Violent crime in England and Wales</a></h4>
+              <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
               <p>Little change in levels of violent crime in recent years</p>
               <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
                 <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
               </div>
-              <details role="group" class="margin-bottom--4 details-small">
-                <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                  <span class="summary">What you need to know</span></summary>
-                <div class="panel" id="details-content-1" aria-hidden="false">
-                  <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
-                </div>
-              </details>
             </div>
-            <div class="flex-col  padding-left--2 padding-right--2"></div>
           </div> -->
 
-          <div class="flex-grid">
+
+            <div class="flex-grid">
             <div class="flex-col background--gallery border--gallery">
               <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
                 <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
@@ -367,11 +343,11 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             </div>
             <div class="flex-col background--gallery border--gallery">
               <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
+                <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
               </div>
               <div class="padding-left--1 padding-right--1">
-                <h4><a class="heading-small" href="../crime-overview">Violent crime in England and Wales</a></h4>
-                <p>Little change in levels of violent crime in recent years.</p>
+                <h4><a class="heading-small" href="../crime-overview">Fraud in England and Wales</a></h4>
+                <p>No change in the volume of fraud offences in the last year</p>
               </div>
             </div>
             <div class="flex-col background--gallery border--gallery">
@@ -384,22 +360,26 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
               </div>
             </div>
           </div>
+            </div>
+          </div>
+        </div>
+
 
           <!-- <p class="margin-top--4">
             <a href="#section-1">Back to top</a>
           </p> -->
+          <div class="wrapper">
+            <div class="col-wrap">
+              <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 id="section-5" class="margin-top--7">Contact us</h2>
-          <div class="content-box">
-            <p class="margin-top--4">Mark Bangs<br>
-              <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
+                <h2 id="section-5" class="margin-top--7">Contact us</h2>
+                <div class="content-box">
+                  <p class="margin-top--4">Mark Bangs<br>
+                    <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
+                </div>
+              </div>
+            </div>
           </div>
-
-          <!-- <p class="margin-top--6">
-            <a href="#section-1">Back to top</a>
-          </p> -->
-
-        </div>
         <!-- end of main wrapper -->
 
 
