changes to highlight pages

--- a/sprint/28/thirds/index.html
+++ b/sprint/28/thirds/index.html
@@ -54,7 +54,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
       <div class="col-wrap">
         <div class="col release-data">
           <p class="font-xsmall">
-            <span class="font-weight--bold">Released date:</span> 26 April 2018
+            <span class="font-weight--bold">Release date:</span> 26 April 2018
             <br /> <span class="font-weight--bold">Next release:</span> 19 July 2018 (provisional)
             <br /></P>
           <div class="release-data">
@@ -95,7 +95,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     <div class="wrapper">
       <div class="col-wrap">
 
-        <div class="col col--md-one-third col--lg-one-third sticky">
+        <div class="col col--md-one-third col--lg-one-third sticky padding-right--3">
           <div class="sticky-nav">
             <h2 class="heading-small margin-top--4">On this page</h2>
             <ul class="section-contents">
