highlight pages changes

--- a/sprint/28/merged-highlight-2/index.html
+++ b/sprint/28/merged-highlight-2/index.html
@@ -9,7 +9,8 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
-  <div class="page-neutral-intro background--gallery">
+  <!-- breadcrumb -->
+  <div id="top" class="page-neutral-intro background--gallery">
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
@@ -40,6 +41,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     </div>
   </div>
 
+  <!-- blue banner -->
   <div class="page-intro background--astral">
     <div class="wrapper">
       <div class="col-wrap">
@@ -68,6 +70,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     </div>
   </div>
 
+  <!-- grey banner -->
   <div class="page-intro background--gallery">
     <div class="wrapper">
       <div class="col-wrap">
@@ -77,7 +80,6 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
         </div>
       </div>
     </div>
-
 
     <div class="wrapper">
       <div class="col-wrap">
@@ -91,17 +93,11 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     </div>
   </div>
 
+  <!-- main content -->
   <div class="padding-bottom--6">
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds">
-          <!-- <h2 class="margin-top--3">On this page you can:</h2>
-          <ul>
-            <li>Get an overview of the key findings of this release</li>
-            <li><a href="#section-2">Download data</a></li>
-            <li>Read a <a href="#glossary">glossary</a> of terms</li>
-            <li>Find more <a href="#section-4">pages relating to crime</a></li>
-          </ul> -->
 
           <h2 id="section-1" class="margin-top--7">Main findings for weapons crime</h2>
           <details role="group" class="margin-bottom--4 margin-top--1">
@@ -198,10 +194,6 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             </div>
           </details>
 
-
-          <!-- <p class="margin-top--4">
-            <a href="#section-1">Back to top</a>
-          </p> -->
 
           <h2 id="section-3" class="margin-top--7">Find information about these statistics</h2>
           <div class="js-show-hide">
@@ -301,35 +293,10 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     </div>
         <!-- end of first column -->
 
-        <div class="wrapper">
+    <div class="wrapper">
           <div class="col-wrap">
             <div class="col">
               <h2 id="section-4" class="margin-top--7">Read more pages relating to crime</h2>
-
-          <!-- <div class="flex-grid">
-            <div class="flex-col background--gallery padding-left--2 padding-right--2">
-              <h4><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></h4>
-              <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</p>
-              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
-              </div>
-            </div>
-            <div class="flex-col background--gallery padding-left--2 padding-right--2">
-              <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
-              <p>No change in the volume of fraud offences in the last year</p>
-              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png " | relative_url }}" class="" alt="">
-              </div>
-            </div>
-            <div class="flex-col background--gallery padding-left--2 padding-right--2">
-              <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
-              <p>Little change in levels of violent crime in recent years</p>
-              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
-              </div>
-            </div>
-          </div> -->
-
 
             <div class="flex-grid">
               <div class="flex-col background--gallery border--gallery">
@@ -370,53 +337,29 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
               </div>
             </div>
 
-
             </div>
           </div>
         </div>
 
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <!-- <p class="margin-top--4">
-            <a href="#section-1">Back to top</a>
-          </p> -->
-          <div class="wrapper">
-            <div class="col-wrap">
-              <div class="col col--md-two-thirds col--lg-two-thirds">
-
-                <h2 id="section-5" class="margin-top--7">Contact us</h2>
-                <div class="content-box">
-                  <p class="margin-top--4">Mark Bangs<br>
-                    <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
-                </div>
-              </div>
-            </div>
+          <h2 id="section-5" class="margin-top--7">Contact us</h2>
+          <div class="content-box">
+            <p class="margin-top--4">Mark Bangs<br>
+              <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
           </div>
+
+          <p class="margin-top--7">
+            <a href="#top">Back to top</a>
+          </p>
+        </div>
+      </div>
+    </div>
         <!-- end of main wrapper -->
 
 
 
-        <div class="col col--md-one-third col--lg-one-quarter sticky">
-          <!-- <div class="">
-            <h2 class="heading-medium">Sections</h2>
-            <ul class="section-contents">
-              <li>
-                <a href="#section-1">Summary</a>
-              </li>
-              <li>
-                <a href="#section-2">Data</a>
-              </li>
-              <li>
-                <a href="#section-3">Need to know</a>
-              </li>
-              <li>
-                <a href="#section-4">In this release</a>
-              </li>
-              <li>
-                <a href="#section-5">Contact</a>
-              </li>
-            </ul>
-          </div> -->
-        </div>
-      </div>
-    </div>
+  </div>
 </main>
