--- a/sprint/28/weapons-crime/index.html
+++ b/sprint/28/weapons-crime/index.html
@@ -51,7 +51,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             <span class="font-weight--bold">Release date:</span> 26 April 2018
             <br /> <span class="font-weight--bold">Next release:</span> 19 July 2018 (provisional)
             <br /></P>
-            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="#">View more pages in this release</a> or
+            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="#">View all pages in this release</a> or
             <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">view previous releases</a>
         </div>
 
@@ -90,13 +90,15 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
 
           <h2 class="margin-top--3">On this page you can:</h2>
           <ul>
-            <li>Get an overview of the key findings of this release</li>
-            <li><a href="#section-2">Download data</a></li>
-            <li>Read a <a href="#glossary">glossary</a> of terms</li>
-            <li>Find more <a href="#section-4">pages relating to crime</a></li>
+            <li>Get an overview of the <a href="#main-findings">main findings for weapons crime</a></li>
+            <li><a href="#data">Download the data</a></li>
+            <li>Learn how we <a href="#info-about-stats">measure these statistics</a></li>
+            <li>Read a <a href="#info-about-stats">glossary</a> of terms</li>
+            <li>Find more <a href="#release-pages">pages in this release</a></li>
+            <li><a href="#contact">Contact us</a></li>
           </ul>
 
-          <h2 id="section-1" class="margin-top--7">Main findings for weapons crime</h2>
+          <h2 id="main-findings" class="margin-top--7">Main findings for weapons crime</h2>
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Knife crime reaches a seven-year-high
@@ -158,7 +160,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             </div>
           </details>
 
-          <h2 id="section-2" class="margin-top--7">Get the data</h2>
+          <h2 id="data" class="margin-top--7">Get the data</h2>
           <p>This bulletin mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
@@ -192,7 +194,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
           </details>
 
 
-          <h2 id="section-3" class="margin-top--7">Find information about these statistics</h2>
+          <h2 id="info-about-stats" class="margin-top--7">Information about these statistics</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
@@ -293,7 +295,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
     <div class="wrapper">
           <div class="col-wrap">
             <div class="col">
-              <h2 id="section-4" class="margin-top--7">Read more pages relating to crime</h2>
+              <h2 id="release-pages" class="margin-top--7">Read more pages in this release</h2>
 
             <div class="flex-grid">
               <div class="flex-col background--gallery border--gallery">
@@ -305,7 +307,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                   <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
                 </div>
                 <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 10 July 2018</p>
+                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
                 </div>
               </div>
               <div class="flex-col background--gallery border--gallery">
@@ -317,7 +319,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                   <p>No change in the volume of fraud offences in the last year</p>
                 </div>
                 <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 10 July 2018</p>
+                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
                 </div>
               </div>
               <div class="flex-col background--gallery border--gallery">
@@ -329,7 +331,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                   <p>Little change in levels of violent crime in recent years.</p>
                 </div>
                 <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 10 July 2018</p>
+                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
                 </div>
               </div>
             </div>
@@ -342,7 +344,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 id="section-5" class="margin-top--7">Contact us</h2>
+          <h2 id="contact" class="margin-top--7">Contact us</h2>
           <div class="content-box">
             <p class="margin-top--4">Mark Bangs<br>
               <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
