--- a/sprint/28/weapons-crime/index.html
+++ b/sprint/28/weapons-crime/index.html
@@ -339,6 +339,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             </div>
           </div>
         </div>
+        <!-- snapshots -->
 
     <div class="wrapper">
       <div class="col-wrap">
