--- a/sprint/28/release-pages/index.html
+++ b/sprint/28/release-pages/index.html
@@ -67,22 +67,22 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
 
             <ul class="list--neutral margin-top--4 padding-left--0">
               <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="https://www.ons.gov.uk/economy/economicoutputandproductivity/output/bulletins/indexofproduction/previousReleases">Crime in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
               </li>
               <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="https://www.ons.gov.uk/economy/economicoutputandproductivity/output/bulletins/indexofservices/previousReleases">Fraud in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-medium" href="../fraud">Fraud in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>No change in the volume of fraud offences in the last year.</p>
               </li>
               <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="https://www.ons.gov.uk/businessindustryandtrade/constructionindustry/datasets/outputintheconstructionindustry">Violent crime in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-medium" href="../violent-crime">Violent crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Little change in levels of violent crime in recent years.</p>
               </li>
               <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/bulletins/retailsales/previousReleases">Weapons crime in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-medium" href="../weapons-crime">Weapons crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
               </li>
@@ -107,7 +107,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
                   <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
                 </div>
                 <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../crime-overview">Fraud in England and Wales</a></h4>
+                  <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
                   <p>No change in the volume of fraud offences in the last year</p>
                 </div>
                 <div class="position-bottom">
@@ -122,7 +122,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
                   <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
                 </div>
                 <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../crime-overview">Violent crime in England and Wales</a></h4>
+                  <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
                   <p>Little change in levels of violent crime in recent years.</p>
                 </div>
                 <div class="position-bottom">
@@ -134,7 +134,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
                   <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
                 </div>
                 <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../crime-overview">Fraud in England and Wales</a></h4>
+                  <h4><a class="heading-small" href="../weapons-crime">Fraud in England and Wales</a></h4>
                   <p>No change in the volume of fraud offences in the last year</p>
                 </div>
                 <div class="position-bottom">
