--- a/sprint/28/release-pages/index.html
+++ b/sprint/28/release-pages/index.html
@@ -66,23 +66,23 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
           <p>Aute in tempor officia veniam non nulla Lorem laborum. Adipisicing officia proident esse anim dolor irure irure do occaecat consectetur sunt minim.</p>
 
             <ul class="list--neutral margin-top--4 padding-left--0">
-              <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></p>
+              <li class="margin-bottom--6">
+                <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
               </li>
-              <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="../fraud">Fraud in England and Wales</a></p>
+              <li class="margin-bottom--6">
+                <p class="margin-bottom--1"><a class="heading-small" href="../fraud">Fraud in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>No change in the volume of fraud offences in the last year.</p>
               </li>
-              <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="../violent-crime">Violent crime in England and Wales</a></p>
+              <li class="margin-bottom--6">
+                <p class="margin-bottom--1"><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Little change in levels of violent crime in recent years.</p>
               </li>
-              <li>
-                <p class="margin-bottom--1"><a class="heading-medium" href="../weapons-crime">Weapons crime in England and Wales</a></p>
+              <li class="margin-bottom--6">
+                <p class="margin-bottom--1"><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
               </li>
@@ -116,7 +116,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
               </div>
             </div>
 
-            <div class="flex-grid margin-top--4">
+            <div class="flex-grid margin-top--2">
               <div class="flex-col background--gallery border--gallery">
                 <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
                   <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
