labels headings, breadcrumbs and release page details

--- a/sprint/28/violent-crime/index.html
+++ b/sprint/28/violent-crime/index.html
@@ -18,7 +18,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
             <div class="breadcrumb">
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../crime-overview">Crime in England and Wales</a>
+                  <a class="breadcrumb__link astral-link" href="../release-pages">Release page</a>
                 </li>
                 <li class="breadcrumb__item">
                   Violent Crime in England and Wales
@@ -91,7 +91,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
           <h2 class="margin-top--3">On this page you can:</h2>
           <ul>
             <li>Get an overview of the <a href="#main-findings">main findings for violent crime</a></li>
-            <li><a href="#data">Download the data</a></li>
+            <li><a href="#data">Get the data</a></li>
             <li>Learn how we <a href="#info-about-stats">measure these statistics</a></li>
             <li>Read a <a href="#info-about-stats">glossary</a> of terms</li>
             <li>Find more <a href="#release-pages">pages in this release</a></li>
@@ -141,7 +141,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p>There are two main sources of data for this release:</p>
                 <ol>
-                  <li>Crime Survey of England and Wales.<br>
+                  <li>Crime Survey of England and Wales<br>
                   The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months.</li>
                   <li>Police recorded crime<br>
                     Police recorded crime is crime that has been reported to the police, and recorded as part of police casework.
@@ -222,7 +222,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
     <div class="wrapper">
           <div class="col-wrap">
             <div class="col">
-              <h2 id="release-pages" class="margin-top--7">Read more pages in this release</h2>
+              <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
 
             <div class="flex-grid">
               <div class="flex-col background--gallery border--gallery">
