--- a/sprint/28/release-pages/index.html
+++ b/sprint/28/release-pages/index.html
@@ -18,11 +18,9 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
             <div class="breadcrumb">
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../crime-overview">Crime in England and Wales</a>
+                  <a class="breadcrumb__link astral-link" style="padding-right:4px;" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">Crime and justice</a>
                 </li>
-                <li class="breadcrumb__item">
-                  All pages in release
-                </li>
+
               </ol>
             </div>
           </nav>
@@ -37,8 +35,8 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p>
+          <h1 class="margin-bottom--4">{{ page.title }}</h1>
+          <!-- <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p> -->
         </div>
       </div>
     </div>
@@ -63,28 +61,28 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
           <h2 class="margin-top--3">All pages in this release</h2>
-          <p>Aute in tempor officia veniam non nulla Lorem laborum. Adipisicing officia proident esse anim dolor irure irure do occaecat consectetur sunt minim.</p>
+
 
             <ul class="list--neutral margin-top--4 padding-left--0">
               <li class="margin-bottom--6">
                 <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
+                <p>Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p>
               </li>
               <li class="margin-bottom--6">
                 <p class="margin-bottom--1"><a class="heading-small" href="../fraud">Fraud in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>No change in the volume of fraud offences in the last year.</p>
+                <p>Attempted fraud and fraud offences involving a loss. Including cyber crime, computer misuse, false accounting, and banking and credit industry fraud.</p>
               </li>
               <li class="margin-bottom--6">
                 <p class="margin-bottom--1"><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Little change in levels of violent crime in recent years.</p>
+                <p>Violent crime including minor assaults, harassment and psychological abuse, wounding, physical assault and death.</p>
               </li>
               <li class="margin-bottom--6">
                 <p class="margin-bottom--1"><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
+                <p>Crime involving knives, guns, and other types of weapon.</p>
               </li>
             </ul>
 
