Correct copy mistake

--- a/sprint/28/fraud/index.html
+++ b/sprint/28/fraud/index.html
@@ -206,7 +206,7 @@ title: "Fraud in England and Wales: year ending December 2017"
               <div class="js-show-hide__content" style="overflow: auto;">
                 <div>
                 <img style="float:left;" class="" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="National Statistics logo"></div>
-                  <div class="padding-left--2" style="overflow:auto;"><p>Certified by the UK Statistics Authority as compliant with it Code of Practice for Official Statistics.<br>
+                  <div class="padding-left--2" style="overflow:auto;"><p>Certified by the UK Statistics Authority as compliant with its Code of Practice for Official Statistics.<br>
                   <a href="https://www.statisticsauthority.gov.uk/national-statistician/types-of-official-statistics/">Learn more</a></p></div>
                 </div>
             </div>
