--- a/sprint/29/fraud/index.html
+++ b/sprint/29/fraud/index.html
@@ -96,7 +96,6 @@ title: "Fraud in England and Wales: year ending December 2017"
             <li>Read a <a href="#info-about-stats">glossary</a> of terms</li>
             <li>Find more <a href="#release-pages">pages in this release</a></li>
             <li><a href="#contact">Contact us</a></li>
-            <li>Read about <a href="#corrections">corrections to data or methodology</a> used on this page</li>
           </ul>
 
           <h2 id="main-findings" class="margin-top--7">Main findings for fraud</h2>
@@ -318,7 +317,7 @@ title: "Fraud in England and Wales: year ending December 2017"
               <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
           </div>
 
-          <h2 id="corrections" class="margin-top--7">Corrections to the data or methodology used on this page</h2>
+          <h2 id="corrections" class="margin-top--7">Corrections</h2>
           <p></p>
 
           <p>19 July 2018 10:36</p>
