Add summary table page

--- a/sprint/29/release-pages/index.html
+++ b/sprint/29/release-pages/index.html
@@ -60,7 +60,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 class="margin-top--3">All pages in this release</h2>
+          <h2 class="margin-top--3">Summary pages in this release</h2>
 
 
             <ul class="list--neutral margin-top--4 padding-left--0">
@@ -86,7 +86,16 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
               </li>
             </ul>
 
-            <div class="content-box icon-box">
+            <h2 class="margin-top--7">Summary tables in this release</h2>
+            <ul class="list--neutral margin-top--4 padding-left--0">
+              <li class="margin-bottom--6">
+                <p class="margin-bottom--1"><a class="heading-small" href="../summary-table">Summary table page title</a></p>
+                <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
+                <p>Ad in excepteur eu elit deserunt incididunt est quis ex sint enim cillum Lorem aliqua ut laboris pariatur id.</p>
+              </li>
+            </ul>
+
+            <div class="content-box icon-box margin-top--7">
               <i class="icon icon-pdf--dark"></i><p><a href="#">Download the whole collection</a></p>
             </div>
 
