Remove view all pages link

--- a/sprint/29/summary-table/index.html
+++ b/sprint/29/summary-table/index.html
@@ -48,8 +48,7 @@ title: "Summary table page"
         <div class="col release-data">
           <p class="font-xsmall margin-bottom--4">
             <span class="font-weight--bold">Release date:</span> 26 April 2018</p>
-            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="../release-pages">View all pages in this release</a> or
-            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">view previous releases</a>
+            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="../release-pages">View all pages in this release</a>
         </div>
       </div>
     </div>
