rename collection page and update links to it

--- a/sprint/30/summary-table/index.html
+++ b/sprint/30/summary-table/index.html
@@ -18,7 +18,7 @@ title: "Summary table page"
             <div class="breadcrumb">
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../release-pages">Release page</a>
+                  <a class="breadcrumb__link astral-link" href="..collection">Release page</a>
                 </li>
                 <li class="breadcrumb__item">
                   Summary table page
@@ -48,7 +48,7 @@ title: "Summary table page"
         <div class="col release-data">
           <p class="font-xsmall margin-bottom--4">
             <span class="font-weight--bold">Release date:</span> 26 April 2018</p>
-            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="../release-pages">View all pages in this release</a>
+            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="../collection">View all pages in this release</a>
         </div>
       </div>
     </div>
