Remove datasets from collection page

--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: true
-title: "Crime in England and Wales: year ending December 2017 release pages"
+title: "Crime in England and Wales: year ending December 2017 collection"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -36,7 +36,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--4">{{ page.title }}</h1>
-          <!-- <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p> -->
+          <p>Est irure amet velit veniam nisi minim adipisicing fugiat fugiat id ad adipisicing consectetur sit culpa sit.</p>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
               </li>
             </ul>
 
-            <h2 class="margin-top--7">Datasets used in this release</h2>
+            <!-- <h2 class="margin-top--7">Datasets used in this release</h2>
             <ul class="list--neutral margin-top--4 padding-left--0">
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Additional tables on Fraud and Cybercrime</a></p>
@@ -106,7 +106,7 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
                 <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
                 <p>Trends in Crime Survey for England and Wales (CSEW) crime experienced by adults and children aged 10 to15 and Home Office police recorded crime, by offence type.</p>
               </li>
-            </ul>
+            </ul> -->
 
             <h2 class="margin-top--7">Summary tables in this release</h2>
             <ul class="list--neutral margin-top--4 padding-left--0">
@@ -120,61 +120,6 @@ title: "Crime in England and Wales: year ending December 2017 release pages"
             <div class="content-box icon-box margin-top--7">
               <i class="icon icon-pdf--dark"></i><p><a href="#">Download the whole collection</a></p>
             </div>
-
-
-            <!-- <div class="flex-grid">
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></h4>
-                  <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
-                  <p>No change in the volume of fraud offences in the last year</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="flex-grid margin-top--2">
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
-                  <p>Little change in levels of violent crime in recent years.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../weapons-crime">Fraud in England and Wales</a></h4>
-                  <p>No change in the volume of fraud offences in the last year</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-            </div> -->
 
         </div>
       </div>
